# alexify

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  manifest.scm  pyproject.toml  requirements-dev.txt  requirements.txt  setup-dev.sh  test_api.py  test_api2.py  test_matching.py  test_matching_debug.py  test_query_order.py  test_single_paper.py  test_title_only.py
alexify/: __init__.py  cli.py  cli_concurrent.py  config.py  core.py  core_concurrent.py  error_handling.py  error_messages.py  http_client.py  logging_config.py  matching.py  progress.py  query_builder.py  search.py  search_async.py  shutdown.py  timeout_utils.py  validation.py
test-output/unknown-year/: W2112796928.json  W2194775991.json
tests/: __init__.py  test_cli.py  test_concurrent.py  test_core.py  test_matching.py  test_performance.py  test_search.py
